FastAPI/09_Fault_Injection/Istio_Fault_Injection.yml
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: vs-for-canary-release
  namespace: default
spec:
  hosts:
    - calculate.default.svc.cluster.local # ここは "*" にするとエラーになる
  http:
    - route:
        - destination:
            host: calculate.default.svc.cluster.local
            subset: cat-with-plus
      fault:
        abort:
          httpStatus: 503
          percentage:
            value: 100
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: ds-for-canary-release
  namespace: default
spec:
  host: calculate.default.svc.cluster.local
  subsets:
    - labels:
        version: cat-plus
      name: cat-with-plus
